--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>Travel Website</title>
+  <title>Travel and Tour</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <li><a href="#Package" data-after="Package">Package</a></li>
             <li><a href="#services" data-after="Services">Services</a></li>
             <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#" data-after="Login">Login</a></li>
+            <li><a href="#" data-after="Login"><span>Login</span></a></li>
           </ul>
         </div>
       </div>
@@ -45,7 +45,7 @@
         <h1>Tours and Travels, </h1>
         <h1>Let's discover the </h1>
         <h1>World together </h1>
-        <a href="#" type="button" class="cta">Book Now</a>
+        <a href="#" type="button" class="button"><span>Book Now</span></a>
       </div>
     </div>
   </section>
@@ -56,7 +56,7 @@
     <div class="info container">
       <div class="info-items">
         <div class="info-item">
-          <div class="icon"><i class="fal fa-money-check-alt"></i></div>
+          <i class="fa fa-money-check-alt"></i>
           <div class="info-info">
             <h1>Competitive Pricing</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="info-item">
-          <div class="icon"><i class="fa-light fa-calendar"></i></div>
+          <i class="fa fa-gears"></i>
           <div class="info-info">
             <h1>Best Services</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="info-item">
-          <div class="icon"><i class="fal fa-location"></i></div>
+          <i class="fa fa-location"></i>
           <div class="info-info">
             <h1>Worldwide Coverage</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
@@ -139,6 +139,18 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
         </div>
+        <div class="Package-item">
+          <div class="Package-img">
+            <img src="./img/travel_site_img/1.jpg" alt="img">
+          </div>
+          <div class="Package-info">
+            <h1>UK</h1>
+            <h2>4 days, 3 nights</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -153,19 +165,16 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/check.png" /></div>
           <h2>Travel Guide</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/check.png" /></div>
           <h2>Ticket Booking</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/check.png" /></div>
           <h2>Hotel Booking</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
@@ -180,7 +189,7 @@
     <div class="offer container">
       <div>
         <h1>Mega Offer <br/> Get 30% off on top destinations <br/> Book your tickets now and get 30% flat discount</h1>
-        <a href="#" type="button" class="cta">Book Now</a>
+        <a href="#" type="button" class="button"><span>Book Now</span></a>
       </div>
     </div>
   </section>
@@ -201,8 +210,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
           repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
           exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
+          Expedita sint ad dolore!</p>
       </div>
     </div>
   </section>
@@ -214,22 +222,23 @@
       <h2>Design by Maaza Mehmood</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="#"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #ffffff;"></i></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="#"><i class="fa-brands fa-facebook fa-beat-fade" style="color: #ffffff;"></i></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+          <a href="#"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #ffffff;"></i></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+          <a href="#"><i class="fa-brands fa-whatsapp fa-beat-fade" style="color: #ffffff;"></i></a>
         </div>
       </div>
       <p>Copyright © 2023 Domain. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
+
   <script src="script.js"></script>
 </body>
 
